--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "build": "scripts/build.sh",
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "format:ci": "prettier --list-different 'src/**/*.{ts,tsx}'",
     "prepublishOnly": "tsc",
     "test": "jest",
     "test-coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls"
